refactor: changed operation logic & validation for characteristics

--- a/CharacterCreatorMenu/CharacterCreatorMenu/CharacterCreatorMenu.csproj
+++ b/CharacterCreatorMenu/CharacterCreatorMenu/CharacterCreatorMenu.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7F2A2FF9-8AFE-402A-9720-5F0EFB7391C3}</ProjectGuid>
+    <ProjectGuid>{56169828-ADE7-436A-AF6C-662268E5673D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp</RootNamespace>
-    <AssemblyName>ConsoleApp</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <RootNamespace>CharacterCreatorMenu</RootNamespace>
+    <AssemblyName>CharacterCreatorMenu</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,16 +42,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Helpers\ConsoleHandler.cs" />
+    <Compile Include="Attributes\MethodToInvoke.cs" />
+    <Compile Include="Enums\CharacteristicType.cs" />
+    <Compile Include="Enums\OperationType.cs" />
+    <Compile Include="Helpers\ClassHelper.cs" />
+    <Compile Include="Helpers\EnumHelper.cs" />
+    <Compile Include="Helpers\InputHelper.cs" />
     <Compile Include="Helpers\Messages.cs" />
-    <Compile Include="Helpers\PointsHandler.cs" />
+    <Compile Include="Models\Add.cs" />
     <Compile Include="Models\Characteristic.cs" />
+    <Compile Include="Models\Operation.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Subtract.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
